--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container">
-         <span class="text-muted">🄯 <script>
+         <span class="text-muted">Copyleft 🄯 <script>
                    new Date().getFullYear() > 2010 && document.write(new Date().getFullYear());
               </script> Green Lean Electrics Inc.</span>
     </div>
