--- a/app/views/manager.ejs
+++ b/app/views/manager.ejs
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Manager Page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css"> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/charts.js"></script>
-    <script src="js/profile.js"></script>
-    <script src="js/manager.js"></script>
-  </head>
- 
-  <body>
-    <div class="container" id="navbar">      
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Manager Page</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/manager.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <script src="js/charts.js"></script>
+  <script src="js/profile.js"></script>
+  <script src="js/manager.js"></script>
+</head>
+
+<body>
+  <div class="box">
+    <div class="container" id="navbar">
       <h1><%= message %>'s Dashboard</span></h1>
       <p>Last updated: <span id="timestamp"></span></p>
       <ul class="nav nav-tabs">
         <li class="nav-item" id="nav-monitor">
-          <a class="nav-link active" >Monitor</a>
+          <a class="nav-link active">Monitor</a>
         </li>
         <li class="nav-item" id="nav-profile">
-          <a class="nav-link" >Profile</a>
+          <a class="nav-link">Profile</a>
         </li>
         <li class="nax-item">
           <form action="/logout" method="get">
-            <input type="submit" class="btn btn-primary" value="Log Out"/>
+            <input type="submit" class="btn btn-primary" value="Log Out" />
           </form>
         </li>
 
@@ -37,20 +45,21 @@
     </div>
 
 
-    <div class="container" id="monitor"> 
+    <div class="container" id="monitor">
       <p>Autopilot</p>
       <label class="switch">
         <input type="checkbox" id="autopilot">
         <span class="slider"></span>
       </label>
-    
+
       <div class="row">
 
         <div class="col-md" style="width: 100%" display="table">
           <h2>Plant electricity settings</h2>
-          
+
           <div>
-            <p>Electricity manual production <input type="text" id="productionValueText"> Wh <button id="setProductionValue">Set</button></p>
+            <p>Electricity manual production <input type="text" id="productionValueText"> Wh <button
+                id="setProductionValue">Set</button></p>
             <input type="range" id="productionSlider" min="0" max="10000" />
             <p>Value: <span id="productionValue"></span> Wh</p>
           </div>
@@ -74,20 +83,22 @@
           <h2>Demand</h2>
           <canvas id="chart"></canvas>
           <!--<script>productionChart('#chart');</script>-->
-          <script>let marketChart = new MarketChart('#chart');</script>
-        
+          <script>
+            let marketChart = new MarketChart('#chart');
+          </script>
+
         </div>
 
       </div>
 
       <h2>Information and online users</h2>
       <div class="row">
-        <!-- Display wind, production etc. as values! -->  
+        <!-- Display wind, production etc. as values! -->
         <div class="col-md">
           <ul>
             <li>Current status: <span id="status"></span></li>
             <li>Current electricity production: <span id="production"></span></li>
-            <li>Current electricity consumption: <span id ="consumption"></span></li>
+            <li>Current electricity consumption: <span id="consumption"></span></li>
             <li>Current market demand: <span id="demand"></span></li>
             <li>Current market price: <span id="price"></span></li>
             <li>Recommended market price: <span id="recPrice"></span></li>
@@ -126,7 +137,7 @@
               <label for="oldPassword">Enter current password</label>
               <input type="password" class="form-control" name="oldPassword" placeholder="Current password">
             </div>
-            
+
             <div class="form-group">
               <label for="newPassword">New password</label>
               <input type="password" class="form-control" name="newPassword" placeholder="Enter new password">
@@ -139,18 +150,20 @@
         </div>
 
         <div class="col-sm">
-          <div class = "img-thumbnail">
+          <div class="img-thumbnail">
             <img src="" class="img-thumbnail" alt="Profile picture" id="profileImg">
           </div>
-          <input type="file" id="fileImg" accept="image/jpeg, image/png" onchange="readUrl(this)"/>
+          <input type="file" id="fileImg" accept="image/jpeg, image/png" onchange="readUrl(this)" />
           <div>
             <span>Only JPEG and PNG! Max file size: 5mb</span>
-            <span id ="profileMessage"></span>
+            <span id="profileMessage"></span>
           </div>
         </div>
-      </div>  
+      </div>
 
     </div>
+  </div>
+  <%- include ('footer.ejs') %>
+</body>
 
-  </body>
 </html>
