--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-     <%- include ('homeheader.ejs', { quote: quote}) %>
+     <%- include ('homeheader.ejs', { quote: quote, author: author }) %>
      <div class="container">
-          <div class="row justify-content-center align-items-center" style="height:100vh">
+          <div class="row justify-content-center align-items-center" style="height:92vh">
                <div class="col-4">
                     <div class="card">
                          <div class="card-body">
@@ -43,7 +43,7 @@
                                              sensitive
                                              information.
                                         </p>
-                                        <input type="submit" value="Sign Up"><span id="signUpMsg"></span></input>
+                                        <input type="submit" value="Sign Up"><span id="signUpMsg"></span>
                                    </div>
                               </form>
                          </div>
