--- a/app/public/css/prosumer.css
+++ b/app/public/css/prosumer.css
@@ -12,12 +12,16 @@ body>* {
 }
 
 .footer {
-    opacity: 0.9;
+    opacity: 0.8;
+    background-color: #f5f5f5;
+    text-align: center;
+    line-height: 60px;
+    flex-shrink: 0;
 }
 
 .box {
     width: 80%;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.8);
     margin: auto;
     flex: 1 0 auto;
 }
