--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -8,6 +8,10 @@ body {
   flex-direction: column;
 }
 
+body>* {
+  flex-shrink: 0;
+}
+
 /* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_switch */
 
 .switch {
@@ -65,24 +69,11 @@ body {
   /* Sticky footer styles from bootstrap.com
 -------------------------------------------------- */
 /* .footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: -60px;
-  line-height: 60px;
   opacity: 0.8;
   background-color: #f5f5f5;
   text-align: center;
-  display: flex;
-} */
-
-/* .footer {
-  opacity: 0.8;
-  background-color: #f5f5f5;
-  height: 60px;
-  margin-top: -60px;
-  text-align: center;
   line-height: 60px;
+  flex-shrink: 0;
 } */
 
 .footer {
@@ -90,7 +81,7 @@ body {
   background-color: #f5f5f5;
   text-align: center;
   line-height: 60px;
-  flex-shrink: 0;
+  margin-top: auto;
 }
 
 .page-header {
