--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -18,9 +18,9 @@
 </head>
 
 <body>
-     <%- include ('homeheader.ejs', { quote: quote }) %>
+     <%- include ('homeheader.ejs', { quote: quote, author: author }) %>
      <div class="container">
-          <div class="row justify-content-center align-items-center" style="height:100vh">
+          <div class="row justify-content-center align-items-center" style="height:92vh">
                <div class="col-4">
                     <div class="card">
                          <div class="card-body">
@@ -35,7 +35,7 @@
                                         <input class="form-control" id="password" type="password" name="password">
                                    </div>
                                    <div>
-                                        <input type="submit" value="Log In"><span id="loginMsg"></span></input>
+                                        <input type="submit" value="Log In"><span id="loginMsg"></span>
                                    </div>
                               </form>
                               <hr class="my-4">
