Update 404 page to follow same style as rest of the pages

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -15,7 +15,7 @@
           integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
      </script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
-     <script src="js/home.js"></script>
+     <script src="js/texteffects.js"></script>
 
 </head>
 
