--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -19,6 +19,19 @@
     line-height: 1em;
 }
 
+.ml11 {
+    font-weight: 100;
+    font-size: 3em;
+    color: #f5f5f5;
+    letter-spacing: 0.25em;
+    width: 100%;
+}
+
+.ml11 .letter {
+    display: inline-block;
+    line-height: 1em;
+}
+
 h1 {
     left: 0;
     position: relative;
