--- a/app/views/404.ejs
+++ b/app/views/404.ejs
@@ -1,8 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>404!</title>    
-    </head>
-    <h1>You broke it!</h1>
+
+<head>
+     <title>GLE Home</title>
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="css/home.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+          integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+     </script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+          integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+     </script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
+     <script src="js/texteffects.js"></script>
+</head>
+
+<body>
+     <%- include ('homeheader.ejs', { quote: quote, author: author }) %>
+     <h1 class="ml12" id="bigtext" style="font-weight: bold;"></h1>
+     <h1 class="ml11" id="bigtext2"></h1>
+     <script>
+         textFadeIn('404!', '#bigtext', 3);
+         textFadeIn('Page could not be found!', '#bigtext2', 3);
+     </script>
+     <%- include ("footer.ejs") %>
+</body>
+
 </html>
