--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -101,18 +101,20 @@
         <!-- Display wind, production etc. as values! -->
         <div class="col-md">
           <ul>
-            <li>Current wind speed: <span id="windspeed"></span></li>
-            <li>Current production: <span id="production"></span></li>
-            <li>Current consumption: <span id="consumption"></span></li>
+            <li>Current wind speed: <span id="windspeed"></span> m/s</li>
+            <li>Current production: <span id="production"></span> Wh</li>
+            <li>Current consumption: <span id="consumption"></span> Wh</li>
+            <li>Bought electricity: <span id="bought"></span> Wh</li>
             <li>Current status: <span id="turbinestatus"></span></li>
           </ul>
         </div>
 
         <div class="col-md">
           <ul>
-            <li>Net production: <span id="netproduction"></span></li>
-            <li>Battery capacity: <span id="batterycap"></span></li>
-            <li>Market price: <span id="marketprice"></span></li>
+            <li>Net production: <span id="netproduction"></span> Wh</li>
+            <li>Battery capacity: <span id="batterycap"></span> Wh</li>
+            <li>Market price: <span id="marketprice"></span> SEK</li>
+            <li>Blocked from market: <span id="blocked"></span></li>
           </ul>
         </div>
 
