--- a/app/views/manager.ejs
+++ b/app/views/manager.ejs
@@ -97,11 +97,13 @@
         <div class="col-md">
           <ul>
             <li>Current status: <span id="status"></span></li>
-            <li>Current electricity production: <span id="production"></span></li>
-            <li>Current electricity consumption: <span id="consumption"></span></li>
-            <li>Current market demand: <span id="demand"></span></li>
-            <li>Current market price: <span id="price"></span></li>
-            <li>Recommended market price: <span id="recPrice"></span></li>
+            <li>Plant electricity production: <span id="production"></span> Wh</li>
+            <li>Plant electricity consumption: <span id="consumption"></span> Wh</li>
+            <li>Current market demand: <span id="demand"></span> Wh</li>
+            <li>Current market price: <span id="price"></span> SEK</li>
+            <li>Current battery cap: <span id="batterycap"></span> Wh</li>
+            <li>Recommended market price: <span id="recPrice"></span> SEK</li>
+            <li>Recommended production: <span id="recProduction"></span> Wh</li>
           </ul>
         </div>
         <div class="col-md">
