--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -124,7 +124,7 @@
     <div class="container" id="profile" style="display:none">
       <h2>Profile</h2>
       <input type="password" id="pass" placeholder="Provide your password">
-      <button type="submit" class="btn btn-primary" onclick="deleteUser()">Delete me!</button>
+      <button type="submit" class="btn btn-primary" onclick="deleteMe()">Delete me!</button>
       <span id="deleteUserMsg"></span>
 
       <div class="row">
